more strict to paper and exaples
